crates/logic/src/models/snapshots/invoice_typst_logic__models__invoice_input_data__tests__serialization_sample_expenses.snap
---
source: crates/logic/src/models/invoice_input_data.rs
expression: "ProtoInput::sample_expenses()"
---
InvoiceInputDataAbstract(
  information: ProtoInvoiceInfo(
    purchase_order: "PO-12345",
    offset: TimestampedInvoiceNumber(
      offset: 237,
      month: "2017-03",
    ),
    months_off_record: MonthsOffRecord([
      "2020-09",
      "2021-03",
    ]),
    terms: "Net 30",
    footer_text: "Reverse VAT according to chapter 1 2§ first section 4b in the VAT regulation.",
    emphasize_color_hex: "#E6007A",
  ),
  vendor: CompanyInformation(
    contact_person: Some("Ture Sventon"),
    organisation_number: "556123-4567",
    company_name: "Bra Detektiv AB",
    postal_address: PostalAddress(
      street_address: StreetAddress(
        line_1: "Storgatan 45",
        line_2: "4 tr",
      ),
      zip: "114 32",
      country: "Sweden",
      city: "Stockholm",
    ),
    vat_number: "SE556123456701",
  ),
  client: CompanyInformation(
    contact_person: Some("Sherlock Holmes"),
    organisation_number: "9876543-2101",
    company_name: "Holmes Ltd",
    postal_address: PostalAddress(
      street_address: StreetAddress(
        line_1: "221B Baker Street",
        line_2: "",
      ),
      zip: "NW1 6XE",
      country: "England",
      city: "London",
    ),
    vat_number: "GB987654321",
  ),
  line_items: Expenses([
    ItemWithoutCost(
      transaction_date: "2025-05-20",
      name: "Breakfast",
      unit_price: UnitPrice(145.0),
      quantity: Quantity(1.0),
      currency: "SEK",
    ),
    ItemWithoutCost(
      transaction_date: "2025-05-31",
      name: "Coffee",
      unit_price: UnitPrice(4.0),
      quantity: Quantity(2.0),
      currency: "GBP",
    ),
    ItemWithoutCost(
      transaction_date: "2025-05-31",
      name: "Sandwich",
      unit_price: UnitPrice(7.0),
      quantity: Quantity(1.0),
      currency: "GBP",
    ),
  ]),
  payment_info: PaymentInformation(
    iban: "SE21 9000 0123 9876 5432 1009",
    bank_name: "SEB",
    bic: "ESSESESS",
    currency: "EUR",
  ),
)
